# StarshipHUD

./: .env.example  .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  flake.nix  justfile  mkdocs.yml  nginx.conf  package-lock.json  package.json  todo.md
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  migrate_holomap_image_fields.py  migrate_widget_heights.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  create_template_db.py  database.py  main.py  migrations.py  seed.py  utils.py
backend/app/api/: __init__.py  assets.py  auth.py  cargo.py  cargo_bays.py  cargo_categories.py  cargo_placements.py  contacts.py  crew.py  events.py  holomap.py  incidents.py  panels.py  scenarios.py  sector_map.py  sensor_contacts.py  session.py  ship_access.py  ship_transfer.py  ships.py  system_categories.py  system_states.py  tasks.py  theme.py  timers.py  uploads.py  users.py
backend/app/models/: __init__.py  asset.py  base.py  cargo.py  cargo_bay.py  cargo_category.py  cargo_placement.py  contact.py  crew.py  event.py  (+12 more)
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_cargo.py  test_cargo_bays.py  test_cargo_categories.py  test_cargo_placements.py  test_contacts.py  test_crew.py  test_events.py  test_holomap.py  test_incidents.py  test_panels.py  test_scenarios.py  test_sector_map.py  test_sensor_contacts.py  test_session.py  test_ship_transfer.py  test_ships.py  test_system_categories.py  test_system_states.py  test_tasks.py  test_timers.py  test_uploads.py  test_utils.py
(+316 files in other folders)
