[project]
name = "starship-hud"
version = "0.1.0"
description = "Starship HUD Backend API"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["tests"]

[tool.ruff.lint.per-file-ignores]
"app/seed.py" = ["E501"]
"app/migrations.py" = ["E501"]
"app/database.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-config=pyproject.toml 	--cov-report=markdown:.coverage_md"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
